src/main/java/com/example/tpotrilateracion/errors/SatelitesIguales.java
package com.example.tpotrilateracion.errors;

public class SatelitesIguales extends RuntimeException {
    public SatelitesIguales (String mens) {
        super(mens);
    }
}

